--- a/StandardUser/src/pro/artse/user/fxml/RegisterForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/RegisterForm.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="491.0" prefWidth="771.0" style="-fx-background-color: #04121c;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+<GridPane fx:controller="pro.artse.user.controllers.RegisterController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="491.0" prefWidth="771.0" style="-fx-background-color: #04121c;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="60.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="643.0" minWidth="10.0" prefWidth="641.0" />
@@ -86,7 +86,7 @@
             <Insets left="70.0" right="70.0" />
          </GridPane.margin>
       </HBox>
-      <Button fx:id="registerButton" mnemonicParsing="false" prefHeight="46.0" prefWidth="200.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="REGISTER" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
+      <Button fx:id="registerButton" mnemonicParsing="false"  prefHeight="46.0" prefWidth="200.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="REGISTER" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
          <GridPane.margin>
             <Insets right="100.0" />
          </GridPane.margin>
