Activity log with REST

--- a/StandardUser/src/pro/artse/user/fxml/LoginForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/LoginForm.fxml
@@ -5,13 +5,12 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane fx:id="loginPane" fx:controller="pro.artse.user.controllers.LoginController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="301.0" prefWidth="486.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="loginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="640.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.LoginController">
    <children>
       <Label layoutX="29.0" layoutY="42.0" prefHeight="44.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Token:" />
       <Label layoutX="30.0" layoutY="107.0" prefHeight="55.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Password*" wrapText="true" />
       <PasswordField fx:id="passwordBox" layoutX="157.0" layoutY="116.0" prefHeight="38.0" prefWidth="240.0" />
       <Button fx:id="loginButton" defaultButton="true" layoutX="246.0" layoutY="229.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="151.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Log in" />
-      <Label fx:id="tokenDisplay" layoutX="153.0" layoutY="47.0" prefHeight="38.0" prefWidth="240.0" stylesheets="@../../../../../../Design/LabelCss.css" text="/sadadad/asdasda/asafasfa" />
+      <Label fx:id="tokenDisplay" layoutX="153.0" layoutY="47.0" prefHeight="38.0" prefWidth="447.0" stylesheets="@../../../../../../Design/LabelCss.css" text="/sadadad/asdasda/asafasfa" />
    </children>
 </AnchorPane>
