--- a/MedicalStaff/src/pro/artse/medicalstaff/fxml/MedicalStaffMainForm.fxml
+++ b/MedicalStaff/src/pro/artse/medicalstaff/fxml/MedicalStaffMainForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -16,10 +17,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="649.0" prefWidth="1017.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.medicalstaff.controllers.MedicalStaffMainController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="658.0" prefWidth="1226.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.medicalstaff.controllers.MedicalStaffMainController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="835.0" minWidth="10.0" prefWidth="719.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="696.0" minWidth="10.0" prefWidth="298.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1008.0" minWidth="10.0" prefWidth="921.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="696.0" minWidth="10.0" prefWidth="305.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -57,19 +58,19 @@
             <Button fx:id="sendButton" layoutX="189.0" layoutY="515.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Send" />
          </children>
       </AnchorPane>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="689.0" style="-fx-border-color: #725438; -fx-border-width: 3;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="592.0" prefWidth="895.0" style="-fx-border-color: #725438; -fx-border-width: 3;">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
          <children>
             <Label alignment="CENTER" layoutX="24.0" layoutY="14.0" prefHeight="27.0" prefWidth="356.0" style="-fx-text-fill: white;" stylesheets="@../../../../../../Design/LabelCss.css" text="Registered users" />
-            <TableView fx:id="usersTableView" layoutX="24.0" layoutY="100.0" prefHeight="483.0" prefWidth="473.0" stylesheets="@../../../../../../Design/tableCss.css">
+            <TableView fx:id="usersTableView" layoutX="24.0" layoutY="100.0" prefHeight="461.0" prefWidth="555.0" stylesheets="@../../../../../../Design/tableCss.css">
               <columns>
-                <TableColumn fx:id="tokenColumn" prefWidth="286.0" text="Token" />
-                  <TableColumn fx:id="statusColumn" prefWidth="186.0" text="Status" />
+                <TableColumn fx:id="tokenColumn" prefWidth="341.0" text="Token" />
+                  <TableColumn fx:id="statusColumn" prefWidth="207.0" text="Status" />
               </columns>
             </TableView>
-            <VBox layoutX="525.0" layoutY="137.0" prefHeight="318.0" prefWidth="131.0">
+            <VBox layoutX="689.0" layoutY="186.0" prefHeight="318.0" prefWidth="131.0">
                <children>
                   <Button fx:id="locationsButton" mnemonicParsing="false" prefHeight="0.0" prefWidth="130.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Locations">
                      <VBox.margin>
@@ -101,6 +102,7 @@
             </VBox>
             <TextField fx:id="searchTokenTextField" layoutX="24.0" layoutY="75.0" prefHeight="25.0" prefWidth="245.0" promptText="Search by token" />
             <Button fx:id="searchButton" layoutX="269.0" layoutY="75.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" style="-fx-background-image: @../../../../../../Design/search.png; -fx-background-color: transparent;" />
+            <PieChart fx:id="statisticChart" labelLineLength="5.0" layoutX="626.0" layoutY="21.0" prefHeight="158.0" prefWidth="235.0" />
          </children>
       </AnchorPane>
    </children>
