--- a/MedicalStaff/src/pro/artse/medicalstaff/fxml/MedicalStaffMainForm.fxml
+++ b/MedicalStaff/src/pro/artse/medicalstaff/fxml/MedicalStaffMainForm.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -32,25 +33,24 @@
          </padding>
          <children>
             <Label alignment="CENTER" layoutX="21.0" layoutY="14.0" prefHeight="27.0" prefWidth="245.0" style="-fx-text-fill: white;" stylesheets="@../../../../../../Design/LabelCss.css" text="Chat" />
-            <TabPane layoutX="21.0" layoutY="58.0" prefHeight="443.0" prefWidth="245.0" style="-fx-background-color: #a67a53;" tabClosingPolicy="UNAVAILABLE">
+            <TabPane layoutX="21.0" layoutY="58.0" prefHeight="443.0" prefWidth="245.0" style="-fx-background-color: #04121c;" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab fx:id="standardUserTab" style="-fx-text-fill: white;" text="Standard user">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <TextArea fx:id="standardUserTextArea" prefHeight="415.0" prefWidth="245.0" />
-                           </children>
-                        </AnchorPane>
-                  </content>
-                </Tab>
+                     <content>
+                        <ScrollPane prefHeight="200.0" prefWidth="200.0">
+                           <content>
+                              <VBox fx:id="standardUserMessages" prefHeight="402.0" prefWidth="232.0" />
+                           </content>
+                        </ScrollPane>
+                     </content></Tab>
                 <Tab fx:id="medicalStaffTab" text="Medical staff">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <TextArea fx:id="medicalStaffTextArea" prefHeight="423.0" prefWidth="245.0" />
-                           </children>
-                        </AnchorPane>
-                  </content>
+                     <content>
+                        <ScrollPane prefHeight="200.0" prefWidth="200.0">
+                           <content>
+                              <VBox fx:id="medicalStaffMessages" prefHeight="402.0" prefWidth="232.0" />
+                           </content>
+                        </ScrollPane>
+                     </content>
                 </Tab>
               </tabs>
             </TabPane>
