--- a/StandardUser/src/pro/artse/user/fxml/StandardUserMainForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/StandardUserMainForm.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ScrollPane?>
 
 <GridPane fx:id="mainUserPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1000.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.StandardUserMainController">
   <columnConstraints>
@@ -38,11 +39,11 @@
                 <RowConstraints maxHeight="302.0" minHeight="10.0" prefHeight="63.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextArea fx:id="messageBox" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
-                     <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </GridPane.margin>
-                  </TextArea>
+                     <ScrollPane prefHeight="200.0" prefWidth="200.0">
+                           <content>
+                              <VBox fx:id="medicalStaffMessages" prefHeight="402.0" prefWidth="232.0" />
+                           </content>
+                      </ScrollPane>
                   <Button fx:id="sendMsgButton" mnemonicParsing="false" prefHeight="36.0" prefWidth="141.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Send message" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                </children>
                <HBox.margin>
