--- a/StandardUser/src/pro/artse/user/fxml/LoginDialog.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/LoginDialog.fxml
@@ -3,16 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPane"  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="301.0" prefWidth="486.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
- fx:controller="pro.artse.user.controllers.LoginDialogController">
+<AnchorPane fx:id="loginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="487.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.LoginDialogController">
    <children>
-      <Label layoutX="29.0" layoutY="42.0" prefHeight="44.0" prefWidth="138.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Password*" />
-      <PasswordField fx:id="passwordField" layoutX="157.0" layoutY="45.0" prefHeight="38.0" prefWidth="240.0" />
-      <Label layoutX="30.0" layoutY="107.0" prefHeight="55.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Repeat password*" wrapText="true" />
-      <PasswordField fx:id="repeatPasswordField" layoutX="157.0" layoutY="116.0" prefHeight="38.0" prefWidth="240.0" />
-      <Button fx:id="loginButton" defaultButton="true" layoutX="292.0" layoutY="219.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="105.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Log in" />
-      <Button fx:id="cancelButton" cancelButton="true" layoutX="157.0" layoutY="219.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="105.0" stylesheets="@../../../../../../Design/CancelButtonCss.css" text="Cancel" />
+      <Label layoutX="26.0" layoutY="124.0" prefHeight="44.0" prefWidth="138.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Password*" />
+      <PasswordField fx:id="passwordField" layoutX="154.0" layoutY="127.0" prefHeight="38.0" prefWidth="240.0" />
+      <Label layoutX="27.0" layoutY="189.0" prefHeight="55.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Repeat password*" wrapText="true" />
+      <PasswordField fx:id="repeatPasswordField" layoutX="154.0" layoutY="198.0" prefHeight="38.0" prefWidth="240.0" />
+      <Button fx:id="loginButton" defaultButton="true" layoutX="292.0" layoutY="272.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="105.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Log in" />
+      <Button fx:id="cancelButton" cancelButton="true" layoutX="157.0" layoutY="272.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="105.0" stylesheets="@../../../../../../Design/CancelButtonCss.css" text="Cancel" />
+      <Label layoutX="21.0" layoutY="65.0" prefHeight="44.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Token*" />
+      <TextField fx:id="tokenField" layoutX="154.0" layoutY="73.0" prefHeight="29.0" prefWidth="240.0" promptText="asfasfafa==sd">
+         <font>
+            <Font name="System Bold Italic" size="9.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
