--- a/StandardUser/src/pro/artse/user/fxml/LoginForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/LoginForm.fxml
@@ -3,14 +3,20 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="640.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.LoginController">
+<AnchorPane fx:id="loginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="640.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.LoginController">
    <children>
-      <Label layoutX="29.0" layoutY="42.0" prefHeight="44.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Token:" />
-      <Label layoutX="30.0" layoutY="107.0" prefHeight="55.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Password*" wrapText="true" />
-      <PasswordField fx:id="passwordBox" layoutX="157.0" layoutY="116.0" prefHeight="38.0" prefWidth="240.0" />
-      <Button fx:id="loginButton" defaultButton="true" layoutX="246.0" layoutY="229.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="151.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Log in" />
-      <Label fx:id="tokenDisplay" layoutX="153.0" layoutY="47.0" prefHeight="38.0" prefWidth="447.0" stylesheets="@../../../../../../Design/LabelCss.css" text="/sadadad/asdasda/asafasfa" />
+      <Label layoutX="128.0" layoutY="71.0" prefHeight="44.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Token:" />
+      <Label layoutX="129.0" layoutY="136.0" prefHeight="55.0" prefWidth="125.0" stylesheets="@../../../../../../Design/LabelCss.css" text="Password*" wrapText="true" />
+      <PasswordField fx:id="passwordBox" layoutX="256.0" layoutY="145.0" prefHeight="38.0" prefWidth="240.0" />
+      <Button fx:id="loginButton" defaultButton="true" layoutX="256.0" layoutY="232.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="151.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Log in" />
+      <TextField fx:id="tokenField" layoutX="256.0" layoutY="78.0" prefHeight="31.0" prefWidth="240.0" promptText="asfasfasfas12as==">
+         <font>
+            <Font name="System Bold Italic" size="9.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
