--- a/StandardUser/src/pro/artse/user/fxml/RegisterForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/RegisterForm.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="registerPane" fx:controller="pro.artse.user.controllers.RegisterController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="491.0" prefWidth="771.0" style="-fx-background-color: #04121c;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
+<GridPane fx:id="registerPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="491.0" prefWidth="771.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.RegisterController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="60.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="643.0" minWidth="10.0" prefWidth="641.0" />
@@ -86,10 +86,22 @@
             <Insets left="70.0" right="70.0" />
          </GridPane.margin>
       </HBox>
-      <Button fx:id="registerButton" mnemonicParsing="false"  prefHeight="46.0" prefWidth="200.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="REGISTER" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="BOTTOM">
+      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+         <children>
+            <Button fx:id="registerButton" mnemonicParsing="false" prefHeight="46.0" prefWidth="200.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="REGISTER">
+               <HBox.margin>
+                  <Insets left="30.0" right="20.0" top="20.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="alreadyRegisteredButton" mnemonicParsing="false" prefHeight="46.0" prefWidth="200.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="ALREADY REGISTERED">
+               <HBox.margin>
+                  <Insets left="30.0" top="20.0" />
+               </HBox.margin>
+            </Button>
+         </children>
          <GridPane.margin>
-            <Insets right="100.0" />
+            <Insets left="70.0" right="70.0" />
          </GridPane.margin>
-      </Button>
+      </HBox>
    </children>
 </GridPane>
