--- a/StandardUser/src/pro/artse/user/fxml/SendFilesForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/SendFilesForm.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="414.0" prefWidth="534.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.LoginDialogController">
+<AnchorPane fx:id="sendFilesPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="414.0" prefWidth="534.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.SendFilesController">
    <children>
       <Button fx:id="sendFilesButton" defaultButton="true" layoutX="410.0" layoutY="343.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="94.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Send" />
       <Button fx:id="cancelButton" cancelButton="true" layoutX="276.0" layoutY="343.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="94.0" stylesheets="@../../../../../../Design/CancelButtonCss.css" text="Cancel" />
@@ -36,7 +36,7 @@
             <Button fx:id="addFile3Button" layoutX="115.0" layoutY="67.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="35.0" stylesheets="@../../../../../../Design/AddButtonCss.css" text="+" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Button fx:id="addFile4Button" layoutX="115.0" layoutY="112.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="35.0" stylesheets="@../../../../../../Design/AddButtonCss.css" text="+" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Button fx:id="addFile5Button" layoutX="115.0" layoutY="157.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="35.0" stylesheets="@../../../../../../Design/AddButtonCss.css" text="+" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Label fx:id="label5" prefHeight="20.0" prefWidth="310.0" style="-fx-font-family: Baskerville Old Face;" textFill="WHITE" GridPane.columnIndex="2">
+            <Label fx:id="label1" prefHeight="20.0" prefWidth="310.0" style="-fx-font-family: Baskerville Old Face;" textFill="WHITE" GridPane.columnIndex="2">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font>
@@ -56,7 +56,7 @@
                   <Font name="System Italic" size="10.0" />
                </font>
             </Label>
-            <Label layoutX="157.0" layoutY="160.0" prefHeight="20.0" prefWidth="310.0" style="-fx-font-family: Baskerville Old Face;" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Label  fx:id = "label5" layoutX="157.0" layoutY="160.0" prefHeight="20.0" prefWidth="310.0" style="-fx-font-family: Baskerville Old Face;" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
                   <Font name="System Italic" size="10.0" />
                </font>
