--- a/StandardUser/src/pro/artse/user/fxml/StandardUserMainForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/StandardUserMainForm.fxml
@@ -5,19 +5,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.ScrollPane?>
 
-<GridPane fx:id="mainUserPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1000.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.StandardUserMainController">
+<GridPane fx:id="mainUserPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1000.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.StandardUserMainController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="1000.0" minWidth="10.0" prefWidth="1000.0" />
   </columnConstraints>
@@ -68,8 +66,14 @@
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </MapView>
-                  <DatePicker fx:id="sinceDatePicker" promptText="since" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <DatePicker fx:id="untilDatePicker" promptText="until" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <DatePicker fx:id="sinceDatePicker" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="160.0" promptText="since" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <GridPane.margin>
+                        <Insets right="60.0" />
+                     </GridPane.margin></DatePicker>
+                  <DatePicker fx:id="untilDatePicker" prefHeight="25.0" prefWidth="160.0" promptText="until" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <GridPane.margin>
+                        <Insets right="60.0" />
+                     </GridPane.margin></DatePicker>
                   <TextArea fx:id="latitudeBox" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="37.0" prefWidth="196.0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                   <TextArea fx:id="longitudeBox" layoutX="10.0" layoutY="367.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="38.0" prefWidth="196.0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                   <Label prefHeight="17.0" prefWidth="93.0" style="-fx-text-fill: white;" stylesheets="@../../../../../../Design/LabelCss.css" text="Latitude" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
@@ -87,6 +91,16 @@
                         <Insets right="20.0" />
                      </GridPane.margin>
                   </Button>
+                  <TextField fx:id="untilTimeTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="55.0" promptText="HH:mm" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <TextField fx:id="sinceTimeTextField" layoutX="444.0" layoutY="12.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="55.0" promptText="HH:mm" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
+                  </TextField>
                </children>
             </GridPane>
             <VBox prefHeight="546.0" prefWidth="254.0">
