--- a/StandardUser/src/pro/artse/user/fxml/StandardUserMainForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/StandardUserMainForm.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <GridPane fx:id="mainUserPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1000.0" style="-fx-background-color: #04121c;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pro.artse.user.controllers.StandardUserMainController">
   <columnConstraints>
@@ -126,21 +127,42 @@
          <menus>
          </menus>
       </MenuBar>
-      <GridPane GridPane.rowIndex="1">
+      <GridPane prefHeight="33.0" prefWidth="1000.0" GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="942.0" minWidth="10.0" prefWidth="895.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="485.0" minWidth="10.0" prefWidth="105.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="942.0" minWidth="10.0" prefWidth="751.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="485.0" minWidth="10.0" prefWidth="249.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="detailsButton" mnemonicParsing="false" prefHeight="34.0" prefWidth="97.0" stylesheets="@../../../../../../Design/ButtonCss.css" text="Details" visible="false" GridPane.columnIndex="1">
+            <HBox fx:id="notificationContainer" prefHeight="28.0" prefWidth="741.0" style="-fx-border-color: #e12424; -fx-border-width: 3; -fx-border-radius: 3;">
+               <children>
+                  <Label fx:id="notificationLabel" prefHeight="32.0" prefWidth="643.0" text="You have been (potentially) infected!" textFill="#e12424">
+                     <font>
+                        <Font name="Baskerville Old Face" size="22.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" top="2.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Button fx:id="showNotificationButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="77.0" style="-fx-background-color: #e12424;" stylesheets="@../../../../../../Design/CancelButtonCss.css" text="Show" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets top="2.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
                <GridPane.margin>
-                  <Insets right="10.0" />
+                  <Insets left="10.0" />
                </GridPane.margin>
-            </Button>
+            </HBox>
          </children>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
       </GridPane>
    </children>
 </GridPane>
