--- a/StandardUser/src/pro/artse/user/fxml/StandardUserMainForm.fxml
+++ b/StandardUser/src/pro/artse/user/fxml/StandardUserMainForm.fxml
@@ -138,7 +138,7 @@
          <children>
             <HBox fx:id="notificationContainer" prefHeight="28.0" prefWidth="741.0" style="-fx-border-color: #e12424; -fx-border-width: 3; -fx-border-radius: 3;">
                <children>
-                  <Label fx:id="notificationLabel" prefHeight="32.0" prefWidth="643.0" text="You have been (potentially) infected!" textFill="#e12424">
+                  <Label fx:id="notificationLabel" prefHeight="32.0" prefWidth="610.0" text="You have been (potentially) infected!" textFill="#e12424">
                      <font>
                         <Font name="Baskerville Old Face" size="22.0" />
                      </font>
@@ -146,7 +146,7 @@
                         <Insets left="10.0" top="2.0" />
                      </HBox.margin>
                   </Label>
-                  <Button fx:id="showNotificationButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="77.0" style="-fx-background-color: #e12424;" stylesheets="@../../../../../../Design/CancelButtonCss.css" text="Show" textFill="WHITE">
+                  <Button fx:id="showNotificationButton" mnemonicParsing="false" prefHeight="34.0" prefWidth="107.0" style="-fx-background-color: #e12424;" stylesheets="@../../../../../../Design/CancelButtonCss.css" text=" Show  (1)" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
